k8s/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp-ingress
  namespace: hello
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /helloApp/api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080

          - path: /helloApp/pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80

          - path: /helloApp
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
